--- a/index.html
+++ b/index.html
@@ -434,35 +434,9 @@
         <div class="container">
             <div class="header-content">
                 <div class="logos">
-                    <svg class="logo" viewBox="0 0 200 100">
-                        <rect width="200" height="100" fill="#7B3FA0"/>
-                        <text x="100" y="40" font-family="Arial, sans-serif" font-size="24" font-weight="bold" fill="white" text-anchor="middle">TEIN CC</text>
-                        <text x="100" y="65" font-family="Arial, sans-serif" font-size="12" fill="white" text-anchor="middle">COOPERATION CENTER</text>
-                    </svg>
-                    <svg class="logo" viewBox="0 0 250 100">
-                        <defs>
-                            <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
-                                <stop offset="0%" style="stop-color:#FF6B9D;stop-opacity:1" />
-                                <stop offset="50%" style="stop-color:#F39C12;stop-opacity:1" />
-                                <stop offset="100%" style="stop-color:#3498DB;stop-opacity:1" />
-                            </linearGradient>
-                        </defs>
-                        <path d="M20 30 Q30 10 50 30 Q70 50 100 30" stroke="url(#grad1)" stroke-width="8" fill="none"/>
-                        <text x="125" y="40" font-family="Arial, sans-serif" font-size="20" font-weight="bold" fill="#F39C12">Asi@</text>
-                        <text x="180" y="40" font-family="Arial, sans-serif" font-size="20" font-weight="bold" fill="#2C3E50">Connect</text>
-                    </svg>
-                    <svg class="logo" viewBox="0 0 200 140">
-                        <rect width="200" height="140" fill="#003399"/>
-                        <g fill="#FFCC00">
-                            <polygon points="100,20 105,35 120,35 108,45 113,60 100,50 87,60 92,45 80,35 95,35"/>
-                            <polygon points="60,40 65,55 80,55 68,65 73,80 60,70 47,80 52,65 40,55 55,55"/>
-                            <polygon points="140,40 145,55 160,55 148,65 153,80 140,70 127,80 132,65 120,55 135,55"/>
-                            <polygon points="40,80 45,95 60,95 48,105 53,120 40,110 27,120 32,105 20,95 35,95"/>
-                            <polygon points="160,80 165,95 180,95 168,105 173,120 160,110 147,120 152,105 140,95 155,95"/>
-                            <polygon points="100,100 105,115 120,115 108,125 113,140 100,130 87,140 92,125 80,115 95,115"/>
-                        </g>
-                        <text x="100" y="155" font-family="Arial, sans-serif" font-size="16" font-weight="bold" fill="#003399" text-anchor="middle">European Union</text>
-                    </svg>
+                    <img src="images/logos/tein-logo.png" alt="TEIN Cooperation Center" class="logo">
+                    <img src="images/logos/asia-connect-logo.png" alt="Asi@Connect" class="logo">
+                    <img src="images/logos/eu-logo.png" alt="European Union" class="logo">
                 </div>
                 <div class="title-section">
                     <h1>SecureAsi@ V2.0</h1>
@@ -640,32 +614,9 @@
     <footer>
         <div class="container">
             <div class="footer-logos">
-                <svg class="footer-logo" viewBox="0 0 200 100">
-                    <rect width="200" height="100" fill="#7B3FA0"/>
-                    <text x="100" y="40" font-family="Arial, sans-serif" font-size="20" font-weight="bold" fill="white" text-anchor="middle">TEIN CC</text>
-                    <text x="100" y="60" font-family="Arial, sans-serif" font-size="10" fill="white" text-anchor="middle">COOPERATION CENTER</text>
-                </svg>
-                <svg class="footer-logo" viewBox="0 0 250 100">
-                    <defs>
-                        <linearGradient id="grad2" x1="0%" y1="0%" x2="100%" y2="0%">
-                            <stop offset="0%" style="stop-color:#FF6B9D;stop-opacity:1" />
-                            <stop offset="50%" style="stop-color:#F39C12;stop-opacity:1" />
-                            <stop offset="100%" style="stop-color:#3498DB;stop-opacity:1" />
-                        </linearGradient>
-                    </defs>
-                    <path d="M20 30 Q30 10 50 30 Q70 50 100 30" stroke="url(#grad2)" stroke-width="6" fill="none"/>
-                    <text x="125" y="40" font-family="Arial, sans-serif" font-size="18" font-weight="bold" fill="#F39C12">Asi@</text>
-                    <text x="170" y="40" font-family="Arial, sans-serif" font-size="18" font-weight="bold" fill="#2C3E50">Connect</text>
-                </svg>
-                <svg class="footer-logo" viewBox="0 0 200 120">
-                    <rect width="200" height="80" fill="#003399"/>
-                    <g fill="#FFCC00">
-                        <polygon points="100,15 103,25 113,25 105,32 108,42 100,37 92,42 95,32 87,25 97,25"/>
-                        <polygon points="70,25 73,35 83,35 75,42 78,52 70,47 62,52 65,42 57,35 67,35"/>
-                        <polygon points="130,25 133,35 143,35 135,42 138,52 130,47 122,52 125,42 117,35 127,35"/>
-                    </g>
-                    <text x="100" y="105" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="#003399" text-anchor="middle">European Union</text>
-                </svg>
+                <img src="images/logos/tein-logo.png" alt="TEIN Cooperation Center" class="footer-logo">
+                <img src="images/logos/asia-connect-logo.png" alt="Asi@Connect" class="footer-logo">
+                <img src="images/logos/eu-logo.png" alt="European Union" class="footer-logo">
             </div>
             <p>&copy; 2018 SecureAsi@ V2.0 Workshop. Funded under ACA2016/376-562 Ref: Asi@Connect-18-014</p>
             <p>Building stronger, more secure research and education networks across Asia</p>
